2003/11/29 11:23 (-0500) rwmcfa1

	* MANIFEST: missing files added

	* t/ignore_keyboard.pl: initial import

	* t/*.t: use the new ignore_keyboard.pl stuff so that tests won't fail
	if you accidentally type while they're going on.

2003/11/29 11:23 (-0500) muppetman

	* MANIFEST
	A examples/inline-images.pl: new example

	* xs/GdkPixbuf.xs: lots of pod for various hard-to-use functions.
	removed unnecessary length() parameter from new_from_inline(), which
	will break any code that was using it, but it's really hard to use
	as it is so i can't imagine anyone's using it.  if you are, i
	apologize.

2003/11/28 21:57 (-0500) muppetman

	* xs/GtkRc.xs: SV * class isn't needed

2003/11/28 14:54 (-0500) rwmcfa1

	* Makefile.PL: DOC_PL_DEPENDS -> POD_DEPENDS

2003/11/28 12:44 (-0500) rwmcfa1

	* Gtk2.pm: fixed bug in cleanpath code, spotty by kaffee
 
	* Makefile.PL: when running podifystockitems.pl include blib path for 
	Gtk2, it may not be installed yet.
	
	* xs/Gdk.xs: doc ^ and gdk_threads -> gdk_threads_init

	* xs/GdkColor.xs, xs/GdkDnd.xs, xs/GdkDrawable.xs, xs/GdkGC.xs,
	xs/GdkProperty.xs, xs/GdkSelection.xs, xs/GtkColorSelection.xs,
	xs/GtkCombo.xs, xs/GtkContainer.xs, xs/GtkCurve.xs,
	xs/GtkFontSelection.xs, xs/GtkList.xs, xs/GtkListStore.xs,
	xs/GtkPaned.xs, xs/GtkRc.xs, xs/GtkSelection.xs, xs/GtkStock.xs,
	xs/GtkStyle.xs, xs/GtkTreeStore.xs, xs/GtkWidget.xs, xs/PangoFont.xs,
	xs/PangoLayout.xs, xs/PangoTabs.xs: doc updates, including ALIAS'es 
	starting at 0 where appropriate.

2003/11/25 11:46 (-0500) rwmcfa1

	* podifystockitems.pl: initial import

	* Gtk2.pm, xs/GtkButton.xs, xs/GtkWidget.xs, xs/GtkWindow.xs: link 
	corrections

	* Makefile.PL: use new DOC_PL_DEPENDS var, added rule for building 
	stock_items.podi

	* xs/Gtk2.xs: cause Gtk2::Separator and Gtk2::Scrollbar to have pages

	* xs/GtkStock.xs: use new include system to put list of stock items in 
	pod

2003/11/24 11:27 (-0500) rwmcfa1

	* xs/GtkCombo.xs, xs/GtkTextBuffer.xs, xs/GtkTextIter.xs,