@@ -24,13 +24,27 @@
 
 MODULE = Gtk2::MessageDialog	PACKAGE = Gtk2::MessageDialog	PREFIX = gtk_message_dialog_
 
+=for apidoc
+=for args format a printf format specifier
+=for args ... arguments for I<$format>
+Create a new Gtk2::Dialog with a simple message.  It will also include an
+icon, as determined by I<$type>.  If you need buttons not available through
+Gtk2::ButtonsType, use 'none' and add buttons with C<< $dialog->add_buttons >>.
+=cut
 GtkWidget *
-gtk_message_dialog_new (class, parent, flags, type, buttons, message)
+gtk_message_dialog_new (class, parent, flags, type, buttons, format, ...)
 	GtkWindow_ornull * parent
 	GtkDialogFlags flags
 	GtkMessageType type
 	GtkButtonsType buttons
-	char * message
-    C_ARGS:
-	parent, flags, type, buttons, message
-
+	guchar * format
+    PREINIT:
+	SV * message;
+    CODE:
+	message = newSV (0);
+	sv_vsetpvfn (message, format, SvLEN (ST (5)),
+	             NULL, &(ST (6)), items - 6, Null(bool*));
+	RETVAL = gtk_message_dialog_new (parent, flags, type, buttons,
+	                                 "%s", SvGChar (message));
+    OUTPUT:
+	RETVAL
